--- a/20221207/src/main/webapp/vue/0116_3_fileopenVue.html
+++ b/20221207/src/main/webapp/vue/0116_3_fileopenVue.html
@@ -25,6 +25,8 @@
             <tbody>
                 <tr v-for="product in products">
                     <td>{{product.id}}</td>
+                    <td>{{product.title}}</td>
+                    <td>{{product.price}}</td>
                     
                 </tr>
             </tbody>
