--- a/20221207/src/main/webapp/vue/0113_3_todolist.html
+++ b/20221207/src/main/webapp/vue/0113_3_todolist.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>todolist</title>
+    <script src="https://unpkg.com/vue@2"></script>
     <style>
         .done-style {
             text-decoration: line-through;
             color: lightgray;
         }
     </style>
-    <script src="https://unpkg.com/vue@2"></script>
 </head>
 
 <body>
-    <h2>TO DO LIST</h2>
+    <h2>To Do List</h2>
     <div id="app">
         <div v-for="todo in todos">
             <label>
                 <input type="checkbox" v-model="todo.done">
-                <span v-bind:class="{'done-style': todo.done}">{{todo.text}} (완료일: {{todo.doneDate}}) </span>
+                <span v-bind:class="{'done-style':todo.done}">{{todo.text}} (완료일: {{todo.doneDate}})</span>
             </label>
         </div>
         <!-- 
             keyup: 키보드가 눌렀다가 때질때 발생하는 이벤트. 버튼 안만들고 엔터치면 되게 할라고 씀
             추가속성 지정가능 : keyup.enter -> 엔터 눌릴때 실행되게하는거
          -->
-        <input type="text" v-model="addTxt" v-on:keyup.enter="addToDo" placeholder="할일">
-        <input type="text" v-motel="addDate" v-on:keyup.enter="addToDo" placeholder="완료일(yyyymmdd형식)">
+        <input type="text" v-model="addTxt" v-on:keyup.enter="addTodo" placeholder="할 일">
+        <input type="text" v-model="addDate" v-on:keyup.enter="addTodo" placeholder="완료일(yyyymmdd형식)">
         <p>
-            <button v-on:click="clearToDo">처리완료 삭제</button>
-            <button v-on:click="sortDate">완료일순 정렬</button>
+            <button v-on:click="clearToDo">처리완료삭제</button>
+            <button v-on:click="sortDate">완료일순정렬</button>
         </p>
-        
-        <p>{{remaining}}/{{todos.length}}건 할일남음</p>
+        <p>{{remaining}} / {{todos.length}}건 할일남음</p>
     </div>
 
     <script>
@@ -44,50 +43,54 @@
             data: {
                 todos: [{
                         done: false,
-                        text: '뷰 공부하기',
-                        doneDate:'20230110',
+                        text: '뷰공부하기',
+                        doneDate: ' 20230123'
                     },
                     {
                         done: false,
-                        text: '자바스크립트 복습하기',
-                        doneDate:'20230110',
+                        text: '자바스크립트복습하기',
+                        doneDate: ' 20230120'
                     },
                     {
                         done: true,
-                        text: '자바는 완료했다고 믿기',
-                        doneDate:'20230112',
-                    }
-
+                        text: '자바는 완료',
+                        doneDate: ' 20230122'
+                    },
                 ],
                 addTxt: '',
-                addDate:'20230119'
+                addDate: '',
             },
-            methods:{
-                addToDo: function(){
-                    if(this.addTxt && this.addDate){
-                        this.todos.push({done:false, text: this.addTxt})
-                        this.addTxt='',
-                        this.addDate=''
-                        document.querySelector('input[placeHolder="할일"]').focus()
-                    } else{
-                        alert('값을 모두 입력하세요');
+            methods: {
+                addTodo: function () {
+                    if (this.addTxt && this.addDate) {
+                        this.todos.push({
+                            done: false,
+                            text: this.addTxt,
+                            doneDate: this.addDate
+                        })
+                        this.addTxt = '';
+                        this.addDate = '';
+                        document.querySelector('input[placeholder="할 일"]').focus();
+                    } else {
+                        alert('값을 입력하세요');
                     }
                 },
-                clearToDo: function(){
-                    this.todos = this.todos.filter(todo => {        //배열이 안바뀌니까 변화가 없어서 다시 변수에 담아줌(?)
+                clearToDo: function () { //배열이 안바뀌니까 변화가 없어서 다시 변수에 담아줌(?)
+                    //배열 자체가 바껴야 화면에 반영됨
+                    this.todos = this.todos.filter(todo => { //원본객수 제거하지않고 새로 만드는게 filter.
                         return todo.done == false;
                     })
                 },
-                sortDate: function(){
-                    this.todos.sort(function (first, second){
-                        return parseInt(first.doneDate) - parseInt(second.doneDate);
+                sortDate: function () {
+                    return this.todos.sort(function (first, second) {
+                        return parseInt(first.doneDate) - parseInt(second.doneDate)
                     })
                 }
             },
-            computed:{
-                remaining: function(){
-                    return this.todos.filter(todo => {  //filter : 조건을 만족하는것만 모아서 새배열 만들어줌
-                        return !todo.done;              //done이 true아닌값을 넘김
+            computed: {
+                remaining: function () {
+                    return this.todos.filter(todo => {
+                        return !todo.done;
                     }).length
                 }
             }
