--- a/20221207/src/main/webapp/vue/0116_4_boardPractice.html
+++ b/20221207/src/main/webapp/vue/0116_4_boardPractice.html
@@ -15,9 +15,10 @@
         <h2>간단한 게시판</h2>
         <input type="file" @change="loadData"> <!-- @change == v-on:change -->
         <my-board-list v-if="listOK" v-bind:object="dataArray" v-on:board-delete="boardDelete"
-            v-on:board-read="boardRead"></my-board-list>
+            v-on:board-read="boardRead" v-on:board-write="boardWrite" v-on:list-save="boardListSave"></my-board-list>
         <!-- board-delete : 커스텀 이벤트임 -->
         <my-board-read v-if="readOK" v-bind:object="boardInfo" v-on:board-list="boardList"></my-board-read>
+        <my-board-write v-if="writeOK" v-on:board-list="boardList" v-on:board-save="boardSave"></my-board-write>
     </div>
 
     <script>
@@ -39,6 +40,8 @@
                             <td><button v-on:click="boardDeleteChild(board.no)">삭제</button></td>
                         </tr> 
                     </table>
+                    <button v-on:click="boardWriteChild">글쓰기</button>
+                    <button v-on:click="boardListSave">게시글 저장</button>
                 </div>
             `,
             props: ['object'],
@@ -48,7 +51,14 @@
                     this.$emit('board-delete', no) //상위요소의 이벤트(우리가 만든 커스텀이벤트) 호출
                 },
                 boardReadChild: function (info) {
+                    //게시글 눌러서 읽기
                     this.$emit('board-read', info)
+                },
+                boardWriteChild: function () {
+                    this.$emit('board-write')
+                },
+                boardListSave: function(){
+                    this.$emit('list-save')
                 }
             }
         }
@@ -77,6 +87,41 @@
             }
         }
 
+        //글쓰기 Component
+        const myBoardWrite = {
+            template: `
+                <div>
+                    <table id="list">
+                        <tr>
+                            <td>글제목</td>
+                            <td><input type="text" v-model="title"></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><textarea v-model="content"></textarea></td>
+                        </tr>
+                    </table>
+                    <button v-on:click="boardListChild">목록보기</button>
+                    <button v-on:click="boardSaveChild">저장하기</button>
+                </div>
+            `,
+            data: function () { //컴포넌트 안에선 데이터에 함수 사용해야함
+                return {
+                    title: '테스트',
+                    content: '테스트 내용입니다.'
+                }
+            },
+            methods: {
+                boardListChild: function () {
+                    this.$emit('board-list')
+                },
+                boardSaveChild: function () {
+                    this.$emit('board-save', this.title, this.content) //board-save를 호출하면 제목과 내용을 매개값으로 던져준다
+                }
+
+            }
+
+        }
+
         //Root Component(제일 상위 컴포넌트)
         new Vue({
             el: '#app',
@@ -84,14 +129,17 @@
                 dataArray: [],
                 boardInfo: {},
                 listOK: true,
-                readOK: false
+                readOK: false,
+                writeOK: false
             },
             components: {
                 'my-board-list': myBoardList,
-                'my-board-read': myBoardRead
+                'my-board-read': myBoardRead,
+                'my-board-write': myBoardWrite
             },
             methods: {
-                loadData: function (e) { //파일 선택하면 화면에 목록뿌림 
+                //파일 선택하면 화면에 글 목록 출력 
+                loadData: function (e) {
                     var file = e.target.files[0];
                     console.log(file)
                     var vm = this
@@ -105,6 +153,7 @@
                         }
                     }
                 },
+                //글 삭제
                 boardDelete: function (no) {
                     for (let i in this.dataArray) {
                         if (this.dataArray[i].no == no) {
@@ -112,23 +161,76 @@
                         }
                     }
                 },
+                //목록읽기(글 상세보기)
                 boardRead: function (info) {
                     this.boardInfo = info;
                     this.listOK = false;
                     this.readOK = true;
+                    this.writeOK = false;
                     //글 조회 마다 카운트 증가
                     for (let i in this.dataArray) {
                         if (this.dataArray[i].no == info.no) {
-                            this.dataArray[i].view += 1; 
+                            this.dataArray[i].view += 1;
                         }
                     }
                 },
+                //목록보기
                 boardList: function () {
                     this.listOK = true;
                     this.readOK = false;
+                    this.writeOK = false;
+                },
+                //글쓰기 화면
+                boardWrite:function(){
+                    this.writeOK = true;
+                    this.readOK = false;
+                    this.listOK = false;
+                },
+                //새로운글 저장하기
+                boardSave: function (title, content) {
+                    let no = 1;
+                    if (this.dataArray.length != 0) { //등록된 글이 있을때
+                        //ary = [{no:1, title:'test'}, {no:2, title:'test2'}, {no:3, title:'test3'}]
+                        no = parseInt(this.dataArray[this.dataArray.length - 1].no)+1; //dataArray배열의 마지막 순번 다음에 추가
+                    }
+                    let boardInfo = {
+                        no: no,
+                        title: title,
+                        content: content,
+                        view: 1
+                    }
+                    this.dataArray.push(boardInfo) //dataArray에다가 추가
+                
+                    this.listOK = true;
+                    this.writeOK = false;
+                    this.readOK = false;
+                },
+                //파일로 저장하기
+                boardListSave: function(){
+                    //data: dataArray, fileName: 'board.json', type: text/json
+                    let data = this.dataArray;
+                    let fileName = 'boards.json';
+                    let fileType = 'text/json';
+
+                    data = {boards:data};
+                    data = JSON.stringify(data);
+                    console.log(data);
+
+                    downloadFiles(data, fileName, fileType);
                 }
             }
         })
+        // json파일로 만들어 다운받기 - 자바스크립트에선 파일다운이 어렵기 때문에 링크를 만들어서 다운받게끔 한다
+        function downloadFiles(data, fileName, fileType){   
+            var file = new Blob([data], {type:fileType});
+
+            var a = document.createElement('a');
+            var url = URL.createObjectURL(file);
+            a.href = url;
+            a.download = fileName;
+            document.body.append(a);
+            a.click();
+        }
     </script>
 
 </body>
